--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,7 @@ dmypy.json
 .vscode
 
 # static
-backend/foodgram/media/
-backend/foodgram/static/
+backend/src/media/
+backend/src/static/
+
+.DS_Store
