fix workflow tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         pip install -r requirements.txt 
     - name: Test with flake8
       run: |
+        cd backend/src
         python -m flake8
 
   build_and_push_backend_to_docker_hub:
