--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         python -m flake8
 
   build_and_push_backend_to_docker_hub:
-      name: Push Docker image to Docker Hub
+      name: Push backend Docker image to Docker Hub
       runs-on: ubuntu-latest
       needs: tests
       steps:
@@ -47,7 +47,7 @@ jobs:
             tags: legyan/backend-ym-pack:latest
 
   build_and_push_ds_to_docker_hub:
-      name: Push Docker image to Docker Hub
+      name: Push DS Docker image to Docker Hub
       runs-on: ubuntu-latest
       needs: build_and_push_backend_to_docker_hub
       steps:
@@ -67,26 +67,26 @@ jobs:
             push: true
             tags: legyan/ds-ym-pack:latest
 
-  build_and_push_frontend_to_docker_hub:
-      name: Push Docker image to Docker Hub
-      runs-on: ubuntu-latest
-      needs: build_and_push_ds_to_docker_hub
-      steps:
-        - name: Check out the repo
-          uses: actions/checkout@v2 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1 
-        - name: Login to Docker 
-          uses: docker/login-action@v1 
-          with:
-            username: ${{ secrets.DOCKER_LOGIN }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push to Docker Hub
-          uses: docker/build-push-action@v2 
-          with:
-            context: ./frontend
-            push: true
-            tags: legyan/frontend-ym-pack:latest
+#  build_and_push_frontend_to_docker_hub:
+#      name: Push frontend Docker image to Docker Hub
+#      runs-on: ubuntu-latest
+#      needs: build_and_push_ds_to_docker_hub
+#      steps:
+#        - name: Check out the repo
+#          uses: actions/checkout@v2 
+#        - name: Set up Docker Buildx
+#          uses: docker/setup-buildx-action@v1 
+#        - name: Login to Docker 
+#          uses: docker/login-action@v1 
+#          with:
+#            username: ${{ secrets.DOCKER_LOGIN }}
+#            password: ${{ secrets.DOCKER_PASSWORD }}
+#        - name: Push to Docker Hub
+#          uses: docker/build-push-action@v2 
+#          with:
+#            context: ./frontend
+#            push: true
+#            tags: legyan/frontend-ym-pack:latest
 
   deploy:
       runs-on: ubuntu-latest
@@ -117,7 +117,8 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T backend python alembic upgrade head
+            sudo docker-compose exec -T backend-ym-pack python alembic upgrade head
+            sudo docker-compose exec -T backend-ym-pack python management/fill_db.py
 
   send_message:
     runs-on: ubuntu-latest
