--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2 
           with:
-            context: ./backend/src
+            context: ./backend
             push: true
             tags: legyan/backend-ym-pack:latest
 
