--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,7 @@ jobs:
             echo HOST=${{ secrets.HOST }} >> .env
             sudo docker-compose up -d
             sudo docker-compose exec -T backend-ym-pack python alembic upgrade head
-            sudo docker-compose exec -T backend-ym-pack python management/fill_db.py
+            sudo docker-compose exec -T backend-ym-pack python python3 -m app.management.fill_db
 
   send_message:
     runs-on: ubuntu-latest
