--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,8 +117,8 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T backend-ym-pack python alembic upgrade head
-            sudo docker-compose exec -T backend-ym-pack python python3 -m app.management.fill_db
+            sudo docker -it infra_backend-ym-pack_1 alembic upgrade head
+            sudo docker -it infra_backend-ym-pack_1 python3 -m app.management.fill_db
 
   send_message:
     runs-on: ubuntu-latest
