--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -5,3 +5,6 @@ POSTGRES_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
+
+DS_HOST=localhost:8001
+SECRET_KEY=<secret_key>
