--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,6 +116,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
+            echo DS_HOST=${{ secrets.DS_HOST }} >> .env
             sudo docker-compose up -d
             sudo docker exec infra_backend-ym-pack_1 alembic upgrade head
             sudo docker exec infra_backend-ym-pack_1 python3 -m app.management.fill_db
