--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
