add management commands

--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -6,5 +6,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
 
+HOST=localhost
 DS_HOST=localhost:8001
 SECRET_KEY=<secret_key>
