--- a/infra/.env.example
+++ b/infra/.env.example
@@ -4,5 +4,7 @@ POSTGRES_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
-SECRET_KEY=secret_key
+
 HOST=localhost
+DS_HOST=localhost:8001
+SECRET_KEY=<secret_key>
