--- a/infra/.env.example
+++ b/infra/.env.example
@@ -1,10 +1,9 @@
 POSTGRES_DB=ym-packing
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DB_HOST=localhost
+DB_HOST=db-ym-pack
 DB_PORT=5432
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
-
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@db-ym-pack/postgres
 HOST=localhost
 DS_HOST=localhost:8001
-SECRET_KEY=<secret_key>
+SECRET_KEY=SECRET_KEY
