--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   db-ym-pack:
     image: postgres:13.0-alpine
     restart: always
+    ports:
+      - "5432:5432"
     volumes:
       - postgresql:/var/lib/postgresql/data/
     env_file:
