--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -1,11 +1,8 @@
-# Переменные базы данных
 POSTGRES_DB=ym-packing
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
-
-HOST=localhost
 DS_HOST=localhost:8001
-SECRET_KEY=<secret_key>
+SECRET_KEY=SECRET_KEY
