--- a/infra/.env.example
+++ b/infra/.env.example
@@ -5,5 +5,5 @@ DB_HOST=db-ym-pack
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db-ym-pack/postgres
 HOST=localhost
-DS_HOST=ds-ym-pack:8001
+DS_HOST=localhost
 SECRET_KEY=SECRET_KEY
