--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,10 +118,10 @@ jobs:
             echo HOST=${{ secrets.HOST }} >> .env
             echo DS_HOST=${{ secrets.DS_HOST }} >> .env
             sudo docker-compose up -d
-            sudo docker exec infra_backend-ym-pack_1 alembic upgrade head
-            sudo docker exec infra_backend-ym-pack_1 python3 -m app.management.fill_db
-            sudo docker exec infra_backend-ym-pack_1 python3 -m app.management.add_orders
-            sudo docker exec infra_backend-ym-pack_1 python3 -m app.management.add_random_barcodes
+            sudo docker-compose exec backend-ym-pack alembic upgrade head
+            sudo docker-compose exec backend-ym-pack python3 -m app.management.fill_db
+            sudo docker-compose exec backend-ym-pack python3 -m app.management.add_orders
+            sudo docker-compose exec backend-ym-pack python3 -m app.management.add_random_barcodes
 
   send_message:
     runs-on: ubuntu-latest
