--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -4,5 +4,5 @@ POSTGRES_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost/postgres
-DS_HOST=localhost
+DS_PACK_URL=http://localhost:8001/pack
 SECRET_KEY=SECRET_KEY
