--- a/infra/.env.example
+++ b/infra/.env.example
@@ -4,6 +4,5 @@ POSTGRES_PASSWORD=postgres
 DB_HOST=db-ym-pack
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db-ym-pack/postgres
-HOST=localhost
-DS_HOST=localhost
+DS_PACK_URL=http://ds-ym-pack:8000/pack
 SECRET_KEY=SECRET_KEY
