--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,7 +116,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
-            echo DS_HOST=${{ secrets.DS_HOST }} >> .env
+            echo DS_PACK_URL=${{ secrets.DS_PACK_URL }} >> .env
             sudo docker-compose up -d
             sudo docker-compose exec backend-ym-pack alembic upgrade head
             sudo docker-compose exec backend-ym-pack python3 -m app.management.fill_db
